# pr-tracker-rust

./: .envrc  .forgebot-git-askpass.sh  .gitignore  AGENTS.md  Cargo.toml  FUNCTIONAL_CORE_ANALYSIS.md  Justfile  README.md  flake.nix
migrations/: 000001_init.sql  000002_add_head_sha_to_pull_requests.sql  000003_add_last_synced_at_to_tracked_repositories.sql  000004_add_approval_status_to_pull_requests.sql  000005_add_user_has_reviewed.sql  000006_add_comments_table.sql
nix/: home-manager-module.nix  package.nix
src/: cli_app.rs  core.rs  db.rs  lib.rs  main.rs  models.rs  pr_repository.rs  scoring.rs  service.rs  service_mapping.rs  sync.rs  tui_app.rs
src/github/: graphql.rs  mappers.rs  mod.rs  schema.rs
src/tui/: action.rs  app.rs  lib.rs  mod.rs  navigation.rs  state.rs  tasks.rs  widgets.rs
src/tui/authors/: events.rs  mod.rs  render.rs  state.rs
src/tui/pr_list/: events.rs  render.rs  state.rs
